# wikitoday

./: 230803.json  Makefile  README.md  pyproject.toml
docs/: arch.iuml  v1.iuml  v2.iuml  v2_component.iuml
src/: consts.py  env.example  main.py  mocks.py  utils.py
src/app/: config.py  exceptions.py  logger.py
src/app/api/: greet.py  trends.py
src/domain/: entities.py
src/domain/localization/: cultural_mapping.py
src/infra/: github.py  google_trends.py  gpt.py  markdown.py  requests.py  translate.py
src/infra/news_crawler/: __init__.py  crawler.py  decoder.py  extractor.py  models.py  storage.py
src/infra/news_crawler/comparer/: comparer_author.py  comparer_date.py  comparer_description.py  comparer_text.py  comparer_title.py  comparer_topimage.py
src/tests/: test_markdown.py
v1/: Makefile  consts.py  env.example  main.py  mocks.py  pyproject.toml  utils.py
v1/app/: config.py
v1/app/api/: trends.py
v1/domain/: entities.py
v1/domain/localization/: cultural_mapping.py
v1/infra/: google_trends.py  markdown.py
v1/infra/news_crawler/: __init__.py  decoder.py
v1/infra/news_crawler/comparer/: comparer.py
v1/infra/sns/: base.py  facebook.py  twitter.py
v1/tests/: test_gpt.py  test_markdown.py
v2/: Makefile
v2/jobs/trends-fetcher/: .gitignore  Dockerfile  Makefile  deploy.cloudbuild.yaml  main.py  requirements.txt
v2/libs/protobuf/: country.proto  country_pb2.py  trend.proto  trend_pb2.py
v2/libs/python/: common_logging.py  utils.py
v2/libs/python/domain/: entities.py
v2/workflows/: articleWorkflow.yaml  myFirstWorkflow.yaml
