[tool.poetry]
name = "llm"
version = "0.1.0"
description = "news"
authors = ["minkj1992 <minkj1992@gmail.com>"]
license = "apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
