[tool.poetry]
name = "wikitoday"
version = "0.1.0"
description = ""
authors = ["minkj1992 <minkj1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
httpx = "^0.24.1"
dotmap = "^1.3.30"
bs4 = "^0.0.1"
python-dateutil = "^2.8.2"
chardet = "^5.1.0"
newspaper3k = "^0.2.8"
readability-lxml = "^0.8.1"
langdetect = "^1.0.9"
openai = "^0.27.8"
jinja2 = "^3.1.2"
tiktoken = "^0.4.0"
tweepy = {extras = ["async"], version = "^4.14.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
